Bug 558742 - Comma doesn't work in print range, r=roc