layout/generic/nsSimplePageSequence.h
@@ -165,6 +165,7 @@ protected:
   PRInt32      mPrintRangeType;
   PRInt32      mFromPageNum;
   PRInt32      mToPageNum;
+  nsTArray<PRInt32> mPageRanges;
 
   // Selection Printing Info
   nscoord      mSelectionHeight;
